--- a/index.html
+++ b/index.html
@@ -1,11 +1,21 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="stylesheet" href="styles.css">
+    <title>Book Display</title>
 </head>
 <body>
-    
+      <header>
+        <h1>NY Books API Display</h1>
+      </header>  
+
+      <div id="loader" class="loader">Cargando ...</div>
+      <div id="book-lists" class="book-lists"></div>
+
+
+    <footer>NY Books Api Display</footer>
+    <script src="script.js"></script>
 </body>
 </html>
