--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
   <!-- Contenedor del spinner de carga -->
-  <div id="loading" class="loading-spinner">Cargando...</div>
+  <div id="loading" class="loading">Cargando...</div>
 
   <!-- Título principal -->
   <header>
