loading set added

--- a/index.html
+++ b/index.html
@@ -3,12 +3,13 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>NY Times Best Sellers</title>
+  <title>NY Times Best Sellers Dashboard</title>
   <link rel="stylesheet" href="styles.css">
+  <link rel="icon" type="image/png" href="/assets/favicon-32x32.png">
 </head>
 <body>
   <!-- Contenedor del spinner de carga -->
-  <div id="loading" class="loading">Cargando...</div>
+  <div id="loading" class="loading"></div>
 
   <!-- Título principal -->
   <header>
