--- a/index.html
+++ b/index.html
@@ -27,6 +27,9 @@
     </form>
   </div>
 
+  <button id="logout-btn">Logout</button>
+
+
   <!-- Contenedor principal -->
   <main id="main-content">
     <!-- Contenedor de listas de libros -->
