toggle light btn

--- a/index.html
+++ b/index.html
@@ -31,6 +31,8 @@
 
   <button id="logout-btn">Logout</button>
 
+  <button id="theme-toggle">Light Mode</button>
+
 
   <!-- Contenedor principal -->
   <main id="main-content">
