--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>NY Times Best Sellers Dashboard</title>
   <link rel="stylesheet" href="styles.css">
-  <link rel="icon" type="image/png" href="/assets/favicon-32x32.png">
+  <link rel="icon" type="image/png" href="assets/favicon-32x32.png">
 </head>
 
 <body>
@@ -51,8 +51,8 @@
   <script src="https://www.gstatic.com/firebasejs/9.6.10/firebase-app-compat.js"></script>
   <script src="https://www.gstatic.com/firebasejs/9.6.10/firebase-auth-compat.js"></script>
   <script src="https://www.gstatic.com/firebasejs/9.6.10/firebase-firestore-compat.js"></script>
-  <script src="/firebase.js"></script>
-  <script src="/script.js"></script>
+  <script src="firebase.js"></script>
+  <script src="script.js"></script>
 </body>
 
 </html>
